updated uwsgi ini files
Signed-off-by: Daniel Gabriele <d.gabri3le@gmail.com>

--- a/{{cookiecutter.service_name}}/uwsgi/development.ini
+++ b/{{cookiecutter.service_name}}/uwsgi/development.ini
@@ -1,18 +1,15 @@
 # {{cookiecutter.service_name}} uWSGI Config (Production)
 
 [uwsgi]
-chdir = %d../../../..
-virtualenv = venv
-wsgi-file = %d/main.py
+wsgi-file = %d../main.py
 callable = app
 http-socket = {{cookiecutter.host}}:{{cookiecutter.port}}
 buffer-size = 65536
-listen = 128
+listen = 256
 processes = 1
-workers = 1
+workers = 2
 gevent = 32
 disable-logging = 0
 memory-report = 1
 py-autoreload = 1
 honour-stdin = 1
-stats = 127.0.0.1:9191
