--- a/{{cookiecutter.service_name}}/uwsgi/production.ini
+++ b/{{cookiecutter.service_name}}/uwsgi/production.ini
@@ -1,8 +1,7 @@
 # {{cookiecutter.service_name}} uWSGI Config (Production)
 
 [uwsgi]
-chdir = %d../../../..
-virtualenv = venv
+wsgi-file = %d../main.py
 wsgi-file = %d/main.py
 callable = app
 http-socket = {{cookiecutter.host}}:{{cookiecutter.port}}
@@ -11,7 +10,7 @@ listen = 2048
 processes = 4
 workers = 4
 gevent = 8
-disable-logging = 1
+disable-logging = 0
 memory-report = 0
 py-autoreload = 0
 honour-stdin = 0
