updated uwsgi ini files
Signed-off-by: Daniel Gabriele <d.gabri3le@gmail.com>

--- a/{{cookiecutter.service_name}}/uwsgi/development.ini
+++ b/{{cookiecutter.service_name}}/uwsgi/development.ini
@@ -1,10 +1,13 @@
 # {{cookiecutter.service_name}} uWSGI Config (Production)
 
 [uwsgi]
+uid = axial
+gid = axial
 wsgi-file = %d../main.py
 callable = app
 http-socket = {{cookiecutter.host}}:{{cookiecutter.port}}
 buffer-size = 65536
+plugins = python3
 listen = 256
 processes = 1
 workers = 2
