--- a/{{cookiecutter.service_name}}/uwsgi/production.ini
+++ b/{{cookiecutter.service_name}}/uwsgi/production.ini
@@ -1,11 +1,14 @@
 # {{cookiecutter.service_name}} uWSGI Config (Production)
 
 [uwsgi]
+uid = axial
+gid = axial
 wsgi-file = %d../main.py
 callable = app
 http-socket = {{cookiecutter.host}}:{{cookiecutter.port}}
 buffer-size = 65536
 listen = 2048
+plugins = python3
 processes = 4
 workers = 2
 gevent = 16
